--- a/codegen/3.0/petstore/petstore-swagger3-jaxrs-cxf/pom.xml
+++ b/codegen/3.0/petstore/petstore-swagger3-jaxrs-cxf/pom.xml
@@ -39,6 +39,15 @@
             <idleTimeout>60000</idleTimeout>
           </httpConnector>
         </configuration>
+
+        <dependencies>
+          <dependency>
+              <groupId>javax.validation</groupId>
+              <artifactId>validation-api</artifactId>
+              <version>${beanvalidation-version}</version>
+          </dependency>
+        </dependencies>
+
         <executions>
           <execution>
             <id>start-jetty</id>
@@ -199,9 +208,9 @@
     <junit-version>4.12</junit-version>
     <logback-version>1.1.7</logback-version>
     <servlet-api-version>2.5</servlet-api-version>
-    
+
     <beanvalidation-version>1.1.0.Final</beanvalidation-version>
-    
+
     
     
     <cxf-version>3.2.1</cxf-version>
