--- a/codegen/3.0/petstore/petstore-swagger3-jaxrs-jersey/pom.xml
+++ b/codegen/3.0/petstore/petstore-swagger3-jaxrs-jersey/pom.xml
@@ -51,6 +51,15 @@
             <idleTimeout>60000</idleTimeout>
           </httpConnector>
         </configuration>
+
+        <dependencies>
+          <dependency>
+              <groupId>javax.validation</groupId>
+              <artifactId>validation-api</artifactId>
+              <version>${beanvalidation-version}</version>
+          </dependency>
+        </dependencies>
+
         <executions>
           <execution>
             <id>start-jetty</id>
@@ -160,7 +169,7 @@
     <dependency>
         <groupId>javax.validation</groupId>
         <artifactId>validation-api</artifactId>
-        <version>1.1.0.Final</version>
+        <version>${beanvalidation-version}</version>
         <scope>provided</scope>
     </dependency>
 
@@ -187,6 +196,9 @@
     <junit-version>4.12</junit-version>
     <logback-version>1.1.7</logback-version>
     <servlet-api-version>2.5</servlet-api-version>
+
+    <beanvalidation-version>1.1.0.Final</beanvalidation-version>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 </project>
