Treepots: Enum in array of array
See https://github.com/OpenAPITools/openapi-generator/pull/66

--- a/openapi-generator-utils/treepots/treepots.yaml
+++ b/openapi-generator-utils/treepots/treepots.yaml
@@ -28,6 +28,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/LongModel'
+  /pull66:
+    get:
+      operationId: pull66
+      requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EnumInArrayOfArray'
+      responses:
+        '200':
+          description: Ok
 components:
   schemas:
     ItemWithBoolean:
@@ -53,3 +64,36 @@ components:
     LongProperty:
       type: integer
       format: int64
+
+    EnumInArrayOfArray:
+      type: object
+      properties:
+        p1:
+          type: array
+          items:
+           type: string
+           enum:
+             - valA
+             - valB
+             - valC
+        p2:
+          type: array
+          items:
+            type: array
+            items:
+              type: string
+              enum:
+                - val1
+                - val2
+                - val3
+        p3:
+          type: array
+          items:
+            type: array
+            items:
+              type: array
+              items:
+                type: string
+                enum:
+                  - lorem
+                  - ipsum
