--- a/openapi-generator-utils/petstore/pom.xml
+++ b/openapi-generator-utils/petstore/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>petstore-openapigen-java-okhttp-gson</module>
+        <module>petstore-openapigen-java-rest-assured</module>
         <module>petstore-openapigen-java-inflector</module>
         <module>petstore-openapigen-jaxrs-cxf</module>
         <module>petstore-openapigen-jaxrs-cxf-cdi</module>
