Treepots: add enums of other types
Test for https://github.com/OpenAPITools/openapi-generator/pull/75

--- a/openapi-generator-utils/treepots/treepots.yaml
+++ b/openapi-generator-utils/treepots/treepots.yaml
@@ -119,8 +119,28 @@ components:
     ObjWithEnums:
       type: object
       properties:
+        IProp:
+            $ref: "#/components/schemas/IntEnum"
+        LProp:
+            $ref: "#/components/schemas/LongEnum"
         SProp:
             $ref: "#/components/schemas/StringEnum"
+
+    IntEnum:
+      type: integer
+      format: int32
+      enum:
+        - 1
+        - 2
+        - 3
+
+    LongEnum:
+      type: integer
+      format: int64
+      enum:
+        - 20
+        - 30
+        - 40
 
     StringEnum:
       type: string
