--- a/openapi-generator-utils/run-openapi-generator/pom.xml
+++ b/openapi-generator-utils/run-openapi-generator/pom.xml
@@ -8,13 +8,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <slf4j-version>1.7.12</slf4j-version>
   </properties>
   
   <dependencies>
     <dependency>
       <groupId>org.openapitools</groupId>
       <artifactId>openapi-generator</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>3.0.1-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>io.swagger</groupId>
@@ -29,6 +30,11 @@
           <artifactId>swagger-parser-v2-converter</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>${slf4j-version}</version>
     </dependency>
   </dependencies>
 
