Fix path to spec

--- a/run-openapi-generator-maven-plugin/pom.xml
+++ b/run-openapi-generator-maven-plugin/pom.xml
@@ -30,7 +30,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <inputSpec>/Users/jbr/Git/openapi-experiments/openapi-generator-utils/petstore/petstore.json</inputSpec>
+              <inputSpec>${project.basedir}/../openapi-generator-utils/petstore/petstore.json</inputSpec>
               <generatorName>java</generatorName>
             </configuration>
           </execution>
