--- a/openapi-generator-utils/treepots/treepots-openapigen-java-inflector/inflector.yaml
+++ b/openapi-generator-utils/treepots/treepots-openapigen-java-inflector/inflector.yaml
@@ -6,7 +6,9 @@ modelMappings:
   DefinitionFromSwaggerSpecification: fully.qualified.path.to.Model
   EnumInArrayOfArray : org.openapitools.model.EnumInArrayOfArray
 ErrorModel : org.openapitools.model.ErrorModel
+IntEnum : org.openapitools.model.IntEnum
 ItemWithBoolean : org.openapitools.model.ItemWithBoolean
+LongEnum : org.openapitools.model.LongEnum
 LongModel : org.openapitools.model.LongModel
 ObjWithEnums : org.openapitools.model.ObjWithEnums
 SomeObject : org.openapitools.model.SomeObject
