Add test case for PR 708
https://github.com/OpenAPITools/openapi-generator/pull/708

--- a/openapi-generator-utils/treepots/treepots.yaml
+++ b/openapi-generator-utils/treepots/treepots.yaml
@@ -75,6 +75,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
+  /pull708:
+    get:
+      operationId: op708
+      tags:
+        - lorem
+      parameters:
+        - name: bar
+          in: query
+          required: false
+          schema:
+            type: string
+            default: foobar
+      responses:
+        default:
+          description: successful operation
 components:
   schemas:
     ItemWithBoolean:
