Teepots: Add enum with custom name.
Test case for https://github.com/OpenAPITools/openapi-generator/pull/917

--- a/openapi-generator-utils/treepots/treepots.yaml
+++ b/openapi-generator-utils/treepots/treepots.yaml
@@ -182,6 +182,16 @@ components:
         - "b"
         - "a"
 
+    EnumWithCustomName:
+      type: integer
+      format: int32
+      enum:
+        - 1
+        - 2
+      x-enum-varnames:
+        - FOO
+        - BAR
+
     SomeObject:
       type: object
       properties:
