--- a/smallrye-experiment/pom.xml
+++ b/smallrye-experiment/pom.xml
@@ -18,5 +18,10 @@
 			<artifactId>smallrye-open-api</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+      <dependency>
+        <groupId>io.thorntail</groupId>
+        <artifactId>microprofile-openapi</artifactId>
+        <version>2.2.0.Final</version>
+      </dependency>
 	</dependencies>
 </project>
