--- a/openapi-generator-utils/treepots/treepots-openapigen-java-inflector/inflector.yaml
+++ b/openapi-generator-utils/treepots/treepots-openapigen-java-inflector/inflector.yaml
@@ -4,13 +4,16 @@ swaggerUrl: ./src/main/swagger/swagger.yaml
 modelMappings:
   # to enable explicit mappings, use this syntax:
   DefinitionFromSwaggerSpecification: fully.qualified.path.to.Model
-  EnumInArrayOfArray : fr.jmini.openapi.openapitools.model.EnumInArrayOfArray
+  Element : fr.jmini.openapi.openapitools.model.Element
+EnumInArrayOfArray : fr.jmini.openapi.openapitools.model.EnumInArrayOfArray
 EnumWithCustomName : fr.jmini.openapi.openapitools.model.EnumWithCustomName
 ErrorModel : fr.jmini.openapi.openapitools.model.ErrorModel
 IntEnum : fr.jmini.openapi.openapitools.model.IntEnum
 ItemWithBoolean : fr.jmini.openapi.openapitools.model.ItemWithBoolean
+Leave : fr.jmini.openapi.openapitools.model.Leave
 LongEnum : fr.jmini.openapi.openapitools.model.LongEnum
 LongModel : fr.jmini.openapi.openapitools.model.LongModel
+Node : fr.jmini.openapi.openapitools.model.Node
 ObjWithEnums : fr.jmini.openapi.openapitools.model.ObjWithEnums
 SomeObject : fr.jmini.openapi.openapitools.model.SomeObject
 StringEnum : fr.jmini.openapi.openapitools.model.StringEnum
