--- a/swagger-parser-experiment/pom.xml
+++ b/swagger-parser-experiment/pom.xml
@@ -13,6 +13,18 @@
     </repository>
   </repositories>
   -->
+  <!-- Uncomment the next section in order to fetch the dependencies from the sonatype snapshots repository -->
+  <!--
+  <repositories>
+    <repository>
+      <id>sonatype-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  -->
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,18 +33,16 @@
   </properties>
   
   <dependencies>
-    <dependency>
-      <groupId>io.swagger.parser.v3</groupId>
-      <artifactId>swagger-parser</artifactId>
-      <version>2.0.7</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>io.swagger.parser.v3</groupId> -->
+<!--       <artifactId>swagger-parser</artifactId> -->
+<!--       <version>2.0.7</version> -->
+<!--     </dependency> -->
     <!-- alternative build -->
-    <!-- 
     <dependency>
       <groupId>org.openapitools.swagger.parser</groupId>
       <artifactId>swagger-parser</artifactId>
-      <version>2.0.2-OpenAPITools.org-1</version>
+      <version>2.0.8-OpenAPITools.org-1</version>
     </dependency>
-     -->
   </dependencies>
 </project>
