--- a/openapi-generator-utils/icespellmint/icespellmint-openapigen-java-resteasy/pom.xml
+++ b/openapi-generator-utils/icespellmint/icespellmint-openapigen-java-resteasy/pom.xml
@@ -9,8 +9,25 @@
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
         <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
-        <url>https://openapi-generator.tech</url>
+        <url>https://github.com/openapitools/openapi-generator</url>
     </scm>
+
+    <licenses>
+        <license>
+            <name>Unlicense</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>OpenAPI-Generator Contributors</name>
+            <email>team@openapitools.org</email>
+            <organization>OpenAPITools.org</organization>
+            <organizationUrl>http://openapitools.org</organizationUrl>
+        </developer>
+    </developers>
 
     <build>
         <plugins>
