--- a/openapi-generator-utils/petstore/petstore-openapigen-java-okhttp-gson/build.gradle
+++ b/openapi-generator-utils/petstore/petstore-openapigen-java-okhttp-gson/build.gradle
@@ -96,8 +96,8 @@ if(hasProperty('target') && target == 'android') {
 
 dependencies {
     compile 'io.swagger:swagger-annotations:1.5.21'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.okhttp:logging-interceptor:2.7.5'
+    compile 'com.squareup.okhttp3:okhttp:3.12.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     compile 'com.google.code.gson:gson:2.8.5'
     compile 'io.gsonfire:gson-fire:1.8.0'
     compile group: 'org.apache.oltu.oauth2', name: 'org.apache.oltu.oauth2.client', version: '1.0.1'
