--- a/openapi-generator-utils/treepots/treepots-openapigen-java-okhttp-gson/pom.xml
+++ b/openapi-generator-utils/treepots/treepots-openapigen-java-okhttp-gson/pom.xml
@@ -114,8 +114,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>
-                                src/main/java</source>
+                                <source>src/main/java</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -127,8 +126,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>
-                                src/test/java</source>
+                                <source>src/test/java</source>
                             </sources>
                         </configuration>
                     </execution>
