More default values and enum cases
Test cases for issue:
https://github.com/OpenAPITools/openapi-generator/issues/2127

--- a/openapi-generator-utils/treepots/treepots.yaml
+++ b/openapi-generator-utils/treepots/treepots.yaml
@@ -176,8 +176,14 @@ components:
             $ref: "#/components/schemas/LongEnum"
         SProp:
             $ref: "#/components/schemas/StringEnum"
+        IProp2:
+            $ref: "#/components/schemas/Int2Enum"
+        LProp2:
+            $ref: "#/components/schemas/Long2Enum"
         SProp2:
             $ref: "#/components/schemas/String2Enum"
+        Custom:
+            $ref: "#/components/schemas/Enum2WithCustomName"
 
     IntEnum:
       type: integer
