--- a/quarkus-experiment/generator/openapi/ping.yaml
+++ b/quarkus-experiment/generator/openapi/ping.yaml
@@ -3,7 +3,7 @@ info:
   title: ping test
   version: '1.0'
 servers:
-  - url: 'http://localhost:8000/'
+  - url: 'http://localhost:8080/api'
 paths:
   /ping:
     get:
