--- a/quarkus-experiment/generator/pom.xml
+++ b/quarkus-experiment/generator/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.openapitools</groupId>
       <artifactId>openapi-generator</artifactId>
-      <version>4.0.1</version>
+      <version>4.1.0-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>io.swagger</groupId>
