--- a/openapi-generator-utils/petstore/petstore-openapigen-java-rest-assured-jackson/pom.xml
+++ b/openapi-generator-utils/petstore/petstore-openapigen-java-rest-assured-jackson/pom.xml
@@ -215,6 +215,32 @@
             <artifactId>threetenbp</artifactId>
             <version>${threetenbp-version}</version>
         </dependency>
+        <!-- JSON processing: jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.joschi.jackson</groupId>
+            <artifactId>jackson-datatype-threetenbp</artifactId>
+            <version>${jackson-version}</version>
+        </dependency>
         <dependency>
             <groupId>com.squareup.okio</groupId>
             <artifactId>okio</artifactId>
@@ -236,6 +262,7 @@
         <gson-fire-version>1.8.3</gson-fire-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
         <threetenbp-version>1.3.8</threetenbp-version>
+        <jackson-version>2.6.4</jackson-version>
         <okio-version>1.13.0</okio-version>
         <junit-version>4.12</junit-version>
     </properties>
