--- a/openapi-generator-utils/icespellmint/icespellmint-test-suite/pom.xml
+++ b/openapi-generator-utils/icespellmint/icespellmint-test-suite/pom.xml
@@ -66,5 +66,11 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.2.3</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
