--- a/openapi-generator-utils/icespellmint/icespellmint-test-suite/pom.xml
+++ b/openapi-generator-utils/icespellmint/icespellmint-test-suite/pom.xml
@@ -47,6 +47,11 @@
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
+            <artifactId>icespellmint-openapigen-java-rest-assured-jackson</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
             <artifactId>icespellmint-openapigen-java-resteasy</artifactId>
             <version>1.0.0</version>
         </dependency>
