--- a/openapi-generator-utils/icespellmint/icespellmint-openapigen-java-okhttp-gson-test-suite/pom.xml
+++ b/openapi-generator-utils/icespellmint/icespellmint-openapigen-java-okhttp-gson-test-suite/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openapitools</groupId>
     <artifactId>icespellmint-openapigen-java-okhttp-gson-test-suite</artifactId>
+    <name>java-okhttp-gson-test-suite</name>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
