Add petstore projects for helidon, openliberty, quarkus and thorntail
Introduced with PR https://github.com/OpenAPITools/openapi-generator/pull/3901

--- a/openapi-generator-utils/petstore/pom.xml
+++ b/openapi-generator-utils/petstore/pom.xml
@@ -17,6 +17,10 @@
         <module>petstore-openapigen-jaxrs-resteasy</module>
         <module>petstore-openapigen-jaxrs-resteasy-eap</module>
         <module>petstore-openapigen-jaxrs-spec</module>
+        <module>petstore-openapigen-jaxrs-spec-helidon</module>
+        <module>petstore-openapigen-jaxrs-spec-openliberty</module>
+        <module>petstore-openapigen-jaxrs-spec-quarkus</module>
+        <module>petstore-openapigen-jaxrs-spec-thorntail</module>
     </modules>
 </project>
 
