--- a/quarkus-experiment/openapi-jaxrs-server/pom.xml
+++ b/quarkus-experiment/openapi-jaxrs-server/pom.xml
@@ -5,11 +5,11 @@
   <groupId>org.openapitools</groupId>
   <artifactId>openapi-jaxrs-server</artifactId>
   <name>openapi-jaxrs-server</name>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
-    <quarkus.version>0.22.0</quarkus.version>
+    <quarkus.version>0.23.2</quarkus.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
