Add additional properties example in pom
See https://github.com/OpenAPITools/openapi-generator/issues/4820

--- a/run-openapi-generator-maven-plugin/pom.xml
+++ b/run-openapi-generator-maven-plugin/pom.xml
@@ -42,6 +42,10 @@
             <configuration>
               <inputSpec>${project.basedir}/../openapi-generator-utils/petstore/petstore.json</inputSpec>
               <generatorName>java</generatorName>
+              <additionalProperties>
+                <additionalProperty>modelNamePrefix=Rest</additionalProperty>
+                <additionalProperty>apiNameSuffix=RestApi</additionalProperty>
+              </additionalProperties>
             </configuration>
           </execution>
         </executions>
