--- a/run-openapi-style-validator-lib/pom.xml
+++ b/run-openapi-style-validator-lib/pom.xml
@@ -40,6 +40,11 @@
       <version>1.2</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit-version}</version>
