--- a/run-openapi-style-validator-gradle-plugin/build.gradle
+++ b/run-openapi-style-validator-gradle-plugin/build.gradle
@@ -1,10 +1,9 @@
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
     }
     dependencies {
-        classpath "org.openapitools.openapistylevalidator:openapi-style-validator-gradle-plugin:1.3-SNAPSHOT"
+        classpath "org.openapitools.openapistylevalidator:openapi-style-validator-gradle-plugin:1.3"
     }
 }
 
